@@ -1,3 +1,9 @@
+2001-02-21  Lauris Kaplinski  <lauris@ximian.com>
+
+	* gnome-print-check.m4: Replaced the awk alchemy with sed alchemy.
+	I seems to work now as long as gnome-config is working - but that is
+	the whole point of gnome-config, isn't it?
+
 2001-02-19  JP Rosevear  <jpr@ximian.com>
 
 	* gnome-pilot.m4: Revert my previous patch now that gnome-pim and
